--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: CrocPRM Patch Notes
 description: Atualizações e downloads do servidor
-theme: minima
-markdown: kramdown
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme
