--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@ title: CrocPRM Patch Notes
 description: Atualizações e downloads do servidor
 theme: minima
 markdown: kramdown
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
