--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,13 @@
 title: CrocPRM Patch Notes
 description: Atualizações e downloads do servidor
-theme: minima
-markdown: kramdown
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-remote-theme
+
+# (opcional) ajuste conforme seu repositório:
+# url: "https://SEUUSER.github.io"
+# baseurl: "/NOMEDOREPO"   # deixe vazio se for site de usuário
+timezone: America/Sao_Paulo
+markdown: kramdown
+kramdown:
+  input: GFM
