--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,17 @@
-title: CrocPRM Patch Notes
-description: Atualizações e downloads do servidor
+title: CrocPRM Server
+description: O servidor de Ragnarok Online mais equilibrado e divertido!
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
 
-# (opcional) ajuste conforme seu repositório:
-# url: "https://SEUUSER.github.io"
-# baseurl: "/NOMEDOREPO"   # deixe vazio se for site de usuário
+# Configuração para GitHub Pages
+url: "https://concs93.github.io"
+baseurl: "/CrocPRMsite"
+
 timezone: America/Sao_Paulo
 markdown: kramdown
 kramdown:
   input: GFM
+
+# Forçar dark theme
+color_scheme: dark
