--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: CrocPRM Server
-description: O servidor de Ragnarok Online mais equilibrado e divertido!
+description: Revivendo o PRM até o magnânimo Luna Obscura!
 
 # Configuração para GitHub Pages
 url: "https://concs93.github.io"
